# esp32-uhf_rfid

./: .gitignore  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/certs/: prvtkey.pem  servercert.pem
main/lib/app_nvs/: app_nvs.c  app_nvs.h
main/lib/bluetooth/: esp_hid_device_main.c  esp_hid_device_main.h  esp_hid_gap.c  esp_hid_gap.h
main/lib/board/: button.c  button.h
main/lib/https_server/: http_server.c  http_server.h
main/lib/packet/: packet.cpp  packet.hpp
main/lib/serial/: serial.cpp  serial.hpp
main/lib/tag_manager/: TagManage.cpp  TagManage.hpp  tag_list.cpp  tag_list.hpp
main/lib/time/: sntp_time.c  sntp_time.h
main/lib/upd/: udp_task.c  udp_task.h
main/lib/utils/: tasks_common.h  typedefs.h
main/lib/wifi_app/: wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
